add_executable(source-store
    add_source_file_command.cpp
    file_descriptor.cpp
    file_descriptor.h
    init_command.cpp
    main.cpp
    md5.cpp
    md5.h
    md5-x8664.S
    md5sum_command.cpp
    repository.cpp
    repository.h
    md5_accumulator.cpp
    md5_accumulator.h
    dwarf_debug.cpp
    dwarf_debug.h
    dwarf_md5.cpp
    dwarf_md5.h)
